[gd_scene load_steps=5 format=3 uid="uid://cs2y7v8pkql8r"]

[ext_resource type="Script" path="res://Scenes/Grid.gd" id="1_1by31"]

[sub_resource type="BoxMesh" id="BoxMesh_bmpyd"]
size = Vector3(2, 0.2, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4k5wf"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tkyyu"]
size = Vector3(0.4, 0.2, 0.4)

[node name="Grid" type="MeshInstance3D"]
mesh = SubResource("BoxMesh_bmpyd")
surface_material_override/0 = SubResource("StandardMaterial3D_4k5wf")
script = ExtResource("1_1by31")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.151621, 0)
shape = SubResource("BoxShape3D_tkyyu")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="MonsterArea" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="MonsterArea"]
shape = SubResource("BoxShape3D_tkyyu")

[node name="MonsterTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="MonsterArea" to="." method="_on_monster_area_area_entered"]
[connection signal="timeout" from="MonsterTimer" to="." method="_on_monster_timer_timeout"]
